# r_barcode

./: README.md
r_barcode/: CHANGELOG.md  README.md  gradle.properties  pubspec.yaml
r_barcode/android/: build.gradle  settings.gradle
r_barcode/android/src/main/: AndroidManifest.xml
r_barcode/android/src/main/cpp/: CMakeLists.txt  native-r_barcode.cpp
r_barcode/android/src/main/cpp/libyuv/: CMakeLists.txt
r_barcode/example/: README.md  pubspec.yaml
r_barcode/example/android/app/: build.gradle
r_barcode/example/android/app/src/debug/: AndroidManifest.xml
r_barcode/example/android/app/src/main/: AndroidManifest.xml
r_barcode/example/android/gradle/wrapper/: gradle-wrapper.properties
r_barcode/example/ios/Flutter/: .last_build_id
r_barcode/example/ios/Runner/: Info.plist
r_barcode/example/ios/Runner.xcodeproj/: project.pbxproj
r_barcode/example/lib/: main.dart
r_barcode/example/test/: widget_test.dart
r_barcode/ios/: r_barcode.podspec
r_barcode/ios/Classes/: RBarcodeCameraConfiguration.swift  RBarcodeCameraView.swift  RBarcodeEngine.swift  RBarcodeEventChannel.swift  RBarcodePlugin.h  RBarcodePlugin.m  SwiftRBarcodePlugin.swift  r_barcode-Bridging-Header.h
r_barcode/ios/Classes/Utils/: RBarcodeFormatUtils.swift  RBarcodePixelConverter.h  RBarcodePixelConverter.m
r_barcode/lib/: r_barcode.dart  r_barcode_camera.dart  r_barcode_exception.dart  r_barcode_format.dart  r_barcode_frame.dart  r_barcode_indicator.dart  r_barcode_result.dart
r_barcode/test/: r_barcode_test.dart
(+13 files in other folders)
